fix: position alignment

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -173,6 +173,7 @@
 
 body {
     margin: 0;
+    padding-top: 10%;
     overflow: hidden;
     height: 100vh;
     max-width: 100vw;
